--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <main>
         <div class="title">DRUM KIT</div>
         <div class="container" id="container">
-            <div class="key">A</div>
+            <!-- <div class="key">A</div>
             <div class="key">B</div>
-            <div class="key">C</div>
+            <div class="key">C</div> -->
+
 
         </div>
 
-        <script src="script.js"></script>
+        <script src="./script.js"></script>
     </main>
+    
 </body>
 
 </html>
