Adiciona função criarDivTitle para criar e adicionar dinamicamente um <div> com texto ao elemento title no HTML.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,12 @@
 
 <body>
     <main>
-        <div class="title">DRUM KIT</div>
-        <div class="container" id="container">
-            <!-- <div class="key">A</div>
-            <div class="key">B</div>
-            <div class="key">C</div> -->
-
-
+        <div class="title" id="title">
         </div>
-
+        <div class="container" id="container">
+        </div>
         <script src="./script.js"></script>
     </main>
-    
 </body>
 
 </html>
